samba (3.0.25-2) UNRELEASED; urgency=low

  * Debian packaging fixes:
    - Enforce building with "--with-ads" and therefore fail
      when the build can't be done with kerberos support. 
      Closes: #424637
  * Merge Ubuntu changes:
    - use of PIDDIR instead of hardcoding it in samba.init and winbind.init
    - The default files permissions in [homes] is 0600 and not 0700

 -- Christian Perrier <bubulle@debian.org>  Sat, 19 May 2007 09:00:56 +0200

samba (3.0.25-1) unstable; urgency=high

  * New upstream version including security fixes
  * Bugs fixed upstream:
    - nmbd no longer segfaults on bad interface line
      Closes: #265577, #386922, #359155, #366800
    - documentation issues about displaycharset. Closes: #350790
    - documentation makes it clear that case options such as
      "default case" can only be set on a per-share basis.
      Closes: #231229
    - all occurrences of "encypt" fixed in smb.conf(5)
      Closes: #408507
    - two typos on "account" fixed in source/passdb/pdb_ldap.c and
      source/utils/pdbedit.c. Closes: #402392
    - no longer panic when using the (deprecated) "only user" option
      in user level security. Closes: #388282
    - CVE-2007-2444 (User privilege elevation because of a local SID/Name
      translation bug)
    - CVE-2007-2446 (Multiple heap overflows allow remote code execution)
    - CVE-2007-2447 (Unescaped user input parameters are passed as
                     arguments to /bin/sh allowing for remote command
                     execution)

  [ Debconf translations ]
  * Marathi added. Closes: #416802
  * Esperanto added. Closes: #417795.
  * Basque updated. Closes: #418196.
  * Wolof updated. Closes: #421636

  [ Christian Perrier ]
  * /etc/dhcp3/dhclient-enter-hooks.d/samba tests for /etc/init.d/samba
    before running invoke-rc.d. Closes: #414841

  [ Steve Langasek ]
  * Comment out use of type-handling in the clean target, because